objects/Opinion_Question_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <description>ユーザが選択した実際の回答を保存します。</description>
        <label>回答</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>位置情報</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Opinion_Question__c</fullName>
        <label>意識調査質問</label>
        <referenceTo>Opinion_Question__c</referenceTo>
        <relationshipLabel>意識調査質問回答</relationshipLabel>
        <relationshipName>Opinion_Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>意識調査質問回答</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OA-{0000}</displayFormat>
        <label>意識調査回答番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>